# sims4-stark-devkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
src/sims4_stark_devkit/: __init__.py  __main__.py  cli.py  compatibility.py  dbpf.py  decompiler.py  scaffolding.py
templates/basic_mod/: README.md
tests/: conftest.py  test_cli.py  test_compatibility.py  test_dbpf.py  test_decompiler.py  test_scaffolding.py
